Update travis inf

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: node_js
 node_js:
 - '6'
-branches:
-  only:
-  - master
-  - "/^lesson-.*$/"
 deploy:
   provider: heroku
   api_key:
@@ -12,3 +8,4 @@ deploy:
   app: square128
   on:
     repo: djkah11/2016_2_Rainbow_square
+    branch: dev
