--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "node test.js",
-    "lint": "./node_modules/.bin/eslint **/*.js"
+    "lintRoot": "./node_modules/.bin/eslint *.js",
+    "lintPublic": "./node_modules/.bin/eslint public/*.js",
+    "lintRootFix": "./node_modules/.bin/eslint *.js --fix",
+    "lintPublicFix":"./node_modules/.bin/eslint public/*.js --fix"
+
   },
   "repository": {
     "type": "git",
