--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "lintRoot": "./node_modules/.bin/eslint *.js",
     "lintPublic": "./node_modules/.bin/eslint public/*.js",
     "lintRootFix": "./node_modules/.bin/eslint *.js --fix",
-    "lintPublicFix":"./node_modules/.bin/eslint public/*.js --fix"
-
-
+    "lintPublicFix": "./node_modules/.bin/eslint public/*.js --fix"
   },
   "repository": {
     "type": "git",
@@ -26,16 +24,14 @@
     "express": "^4.14.0",
     "technolibs": "1.1.0",
     "json-schema-mock": "0.0.8",
-    "techno-gendoc": "0.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^3.5.0",
-
     "techno-gendoc": "0.4.1"
   },
+  "devDependencies": {
+    "eslint": "3.5.0",
     "eslint-config-airbnb": "11.1.0",
     "eslint-plugin-import": "1.15.0",
     "eslint-plugin-jsx-a11y": "2.2.2",
     "eslint-plugin-react": "6.2.2"
   }
+}
 
