--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "eslint-config-airbnb": "11.1.0",
     "eslint-plugin-import": "1.15.0",
     "eslint-plugin-jsx-a11y": "2.2.2",
-    "eslint-plugin-react": "6.2.2"
+    "eslint-plugin-react": "6.2.2",
+    "babel-core": "~5.1.10",
+    "webpack": "~1.8.4",
+    "babel-loader": "~5.0.0"
   }
 }
 
