Refactor code by eslint rules part1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample",
+  "name": "Rainbow_square",
   "version": "1.0.0",
   "description": "",
   "main": "sevrer.js",
@@ -8,7 +8,7 @@
     "lintRoot": "./node_modules/.bin/eslint *.js",
     "lintPublic": "./node_modules/.bin/eslint public/*.js",
     "lintRootFix": "./node_modules/.bin/eslint *.js --fix",
-    "lintPublicFix": "./node_modules/.bin/eslint public/* *.js --fix"
+    "lintPublicFix": "./node_modules/.bin/eslint \"public/**/*.js\" --fix"
   },
   "repository": {
     "type": "git",
