--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
+    "fest": "./node_modules/.bin/fest-build --dir=public/components/"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,9 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-	"technolibs": "1.1.0",
+    "fest": "^0.12.1",
     "json-schema-mock": "0.0.8",
-	"techno-gendoc": "0.3.0"
+    "techno-gendoc": "0.3.0",
+    "technolibs": "1.1.0"
   }
 }
