--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sample",
+  "name": "Rainbow square",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "node test.js",
     "fest": "./node_modules/.bin/fest-build --dir=public/components/"
@@ -20,6 +20,11 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "fest": "^0.12.1",
+    "webpack": "^1.13.2",
+    "babel-loader":"^6.2.5",
+    "babel-core": "^6.0.0",
+    "babel-preset-es2015": "^6.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "json-schema-mock": "0.0.8",
     "techno-gendoc": "0.3.0",
     "technolibs": "1.1.0"
