--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "express": "^4.14.0",
     "fest": "^0.12.1",
     "webpack": "^1.13.2",
-    "babel-loader":"^6.2.5",
+    "babel-loader": "^6.2.5",
     "babel-core": "^6.0.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-plugin-transform-runtime@": "^6.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "json-schema-mock": "0.0.8",
     "techno-gendoc": "0.3.0",
     "technolibs": "1.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0"
   }
 }
