--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-loader": "^6.2.5",
     "babel-core": "^6.0.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-plugin-transform-runtime@": "^6.15.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "json-schema-mock": "0.0.8",
     "techno-gendoc": "0.3.0",
