--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "techno-gendoc": "0.3.0",
     "technolibs": "1.1.0",
     "bootstrap-social":"^5.0.0",
-    "bootstrap":"^3.3.7"
-
+    "bootstrap":"^3.3.7",
+    "karma": "^1.3.0",
+    "jasmine":"^2.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
